# quantify-data

./: README.md
clients/cli/: .gitignore  build.sh  cli.py
extensions/: README.md
extensions/polygon/: Cargo.toml
extensions/polygon/src/: lib.rs
extensions/polygon/src/agg/: mod.rs
extensions/polygon/src/meta/: mod.rs
extensions/tiingo/: Cargo.toml
extensions/tiingo/src/: lib.rs  main.rs
extensions/tiingo/src/eod/: mod.rs
extensions/tiingo/src/meta/: mod.rs
extensions/yfinance/: Cargo.toml
proto/: quantify.proto
quantify-data/: .gitignore  Cargo.toml  build.rs
quantify-data/src/: bin.rs  data_poller.rs  main.rs  server.rs
quantify-data/src/executor/: mod.rs
quantify-data/src/executor/tasks/: api_managers.rs  mod.rs
quantify-data/src/executor/tasks/add_ticker/: mod.rs
quantify-data/src/executor/tasks/candle/: aggregate_data_interface.rs  mod.rs
quantify-data/src/gui/: menu_bar.rs  mod.rs
quantify-data/src/server/: grpc.rs
scripts/mongo/: README.md  setup.js
