[package]
name = "quantify-data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quantify-data"
path = "src/server.rs"

[dependencies]
tiingo = {path = "../extensions/tiingo"}
mongodb = "2.6.1"
prost = "0.11.9"
tokio = {version = "1.31.0", features=["macros", "rt-multi-thread"]}
tonic = "0.9.2"
reqwest = "0.11.20"
log = "0.4.20"

[build-dependencies]
tonic-build = "0.9.2"
