[package]
name = "quantify-data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quantify-data"
path = "src/main.rs"

[dependencies]
tiingo = {path = "../extensions/tiingo"}
polygon = {path = "../extensions/polygon"}
mongodb = "2.6.1"
prost = "0.11.9"
tokio = {version = "1.31.0", features=["macros", "rt-multi-thread"]}
reqwest = "0.11.20"
log = "0.4.20"
chrono = "0.4.28"
serde = {version = "1.0.188", features = ["derive"]}
futures = "0.3.28"
