[package]
name = "quantify-data"
version = "0.1.0"
edition = "2021"

[lib]
name = "quantifylib"
path = "src/lib.rs"

[[bin]]
name = "quantify-data-server"
path = "src/bin.rs"

[dependencies]
tiingo = {path = "../extensions/tiingo"}
polygon = {path = "../extensions/polygon"}
mongodb = "2.6.1"
prost = "0.11.9"
tokio = {version = "1.31.0", features=["macros", "rt-multi-thread"]}
tonic = "0.9.2"
reqwest = "0.11.20"
log = "0.4.20"
chrono = "0.4.28"
serde = {version = "1.0.188", features = ["derive"]}
futures = "0.3.28"
clap = {version = "4.4.6", features=["derive"]}
env_logger = "0.10.0"
eframe = "0.23.0"
egui = "0.23.0"

[build-dependencies]
tonic-build = "0.9.2"
